// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`templates > ak > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.gas-cylinder",
        "to": "gas-cylinder.rear",
      },
      {
        "from": "barrel.gas-port",
        "to": "gas-block.barrel",
      },
      {
        "from": "gas-block.gas-cylinder",
        "to": "gas-cylinder.front",
      },
      {
        "from": "gas-cylinder.handguard",
        "to": "handguard.gas-cylinder",
      },
      {
        "from": "receiver.rear-sight",
        "to": "rear-sight.base",
      },
      {
        "from": "barrel.front-sight",
        "to": "front-sight.base",
      },
    ],
    "description": "Generated from the "ak" template with seed 100.",
    "name": "ak-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "front-sight": {
        "family": "front-sight",
      },
      "gas-block": {
        "family": "gas-block",
      },
      "gas-cylinder": {
        "family": "gas-cylinder",
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "L",
          "layout": "standard",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "ak",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "L",
          "profile": "ak-curved",
          "variant": "akm",
        },
      },
      "rear-sight": {
        "family": "ak-rear-sight",
      },
      "receiver": {
        "family": "ak-receiver",
        "params": {
          "bore": "S",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "dropped",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.gas-cylinder",
        "to": "gas-cylinder.rear",
      },
      {
        "from": "barrel.gas-port",
        "to": "gas-block.barrel",
      },
      {
        "from": "gas-block.gas-cylinder",
        "to": "gas-cylinder.front",
      },
      {
        "from": "gas-cylinder.handguard",
        "to": "handguard.gas-cylinder",
      },
      {
        "from": "receiver.rear-sight",
        "to": "rear-sight.base",
      },
      {
        "from": "barrel.front-sight",
        "to": "front-sight.base",
      },
    ],
    "description": "Generated from the "ak" template with seed 200.",
    "name": "ak-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
        },
      },
      "front-sight": {
        "family": "front-sight",
      },
      "gas-block": {
        "family": "gas-block",
      },
      "gas-cylinder": {
        "family": "gas-cylinder",
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "L",
          "layout": "ak",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "ak",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "L",
          "profile": "ak-curved",
          "variant": "ak74",
        },
      },
      "rear-sight": {
        "family": "ak-rear-sight",
      },
      "receiver": {
        "family": "ak-receiver",
        "params": {
          "bore": "S",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "dropped",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.gas-cylinder",
        "to": "gas-cylinder.rear",
      },
      {
        "from": "barrel.gas-port",
        "to": "gas-block.barrel",
      },
      {
        "from": "gas-block.gas-cylinder",
        "to": "gas-cylinder.front",
      },
      {
        "from": "gas-cylinder.handguard",
        "to": "handguard.gas-cylinder",
      },
      {
        "from": "receiver.rear-sight",
        "to": "rear-sight.base",
      },
      {
        "from": "barrel.front-sight",
        "to": "front-sight.base",
      },
    ],
    "description": "Generated from the "ak" template with seed 300.",
    "name": "ak-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "front-sight": {
        "family": "front-sight",
      },
      "gas-block": {
        "family": "gas-block",
      },
      "gas-cylinder": {
        "family": "gas-cylinder",
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "S",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "L",
          "layout": "standard",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "ak",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "L",
          "profile": "ak-curved",
          "variant": "akm",
        },
      },
      "rear-sight": {
        "family": "ak-rear-sight",
      },
      "receiver": {
        "family": "ak-receiver",
        "params": {
          "bore": "M",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "dropped",
        },
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > ar > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 0,
        "to": "sight.base",
      },
      {
        "from": "barrel.front-sight",
        "to": "front-sight.base",
      },
    ],
    "description": "Generated from the "ar" template with seed 100.",
    "name": "ar-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "front-sight": {
        "family": "front-sight",
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "length": "M",
          "mount": "free-float",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "ar",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "M",
          "profile": "stanag-curved",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "S",
          "chargingHandle": "rear-top",
          "feed": "box",
          "rail": "full",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "straight",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "barrel.front-sight",
        "to": "front-sight.base",
      },
    ],
    "description": "Generated from the "ar" template with seed 200.",
    "name": "ar-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
        },
      },
      "front-sight": {
        "family": "front-sight",
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "length": "L",
          "mount": "free-float",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "ar",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "M",
          "profile": "stanag-curved",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "S",
          "chargingHandle": "rear-top",
          "feed": "box",
          "rail": "full",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "straight",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 0,
        "to": "sight.base",
      },
      {
        "from": "barrel.front-sight",
        "to": "front-sight.base",
      },
    ],
    "description": "Generated from the "ar" template with seed 300.",
    "name": "ar-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "front-sight": {
        "family": "front-sight",
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "length": "M",
          "mount": "clamped",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "ar",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "M",
          "profile": "stanag-curved",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "M",
          "chargingHandle": "rear-top",
          "feed": "box",
          "rail": "full",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "straight",
        },
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > battle-rifle > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "handguard.rail",
        "slot": 1,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "battle-rifle" template with seed 100.",
    "name": "battle-rifle-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "L",
          "length": "S",
          "mount": "free-float",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "S",
          "orientation": "slant-5",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "straight",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "handguard.rail",
        "slot": 7,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "battle-rifle" template with seed 200.",
    "name": "battle-rifle-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "L",
          "length": "M",
          "mount": "free-float",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "L",
          "orientation": "tilt",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.rail",
        "slot": 2,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "battle-rifle" template with seed 300.",
    "name": "battle-rifle-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
          "length": "S",
          "mount": "free-float",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "M",
          "orientation": "slant-5",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "L",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > bolt-rifle > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "handguard.rail",
        "slot": 6,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle" template with seed 101.",
    "name": "bolt-rifle-101",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "thumbhole",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "S",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "top",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "thumbhole",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 6,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle" template with seed 200.",
    "name": "bolt-rifle-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "S",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "top",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "sporting",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
    ],
    "description": "Generated from the "bolt-rifle" template with seed 300.",
    "name": "bolt-rifle-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "thumbhole",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "S",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "L",
          "feed": "top",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "thumbhole",
        },
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > bolt-rifle-box > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 6,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle-box" template with seed 100.",
    "name": "bolt-rifle-box-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
          "length": "L",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
          "magazineWell": "recessed",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "10-round",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "sporting",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 6,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle-box" template with seed 200.",
    "name": "bolt-rifle-box-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
          "length": "L",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
          "magazineWell": "recessed",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "5-round",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "sporting",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 3,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle-box" template with seed 300.",
    "name": "bolt-rifle-box-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
          "magazineWell": "recessed",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "5-round",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "L",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "sporting",
        },
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > bolt-rifle-thumbhole > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 1,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle-thumbhole" template with seed 100.",
    "name": "bolt-rifle-thumbhole-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
          "profile": "heavy",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "barrelBore": "L",
          "clearance": "L",
          "length": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "thumbhole",
          "magazineWell": "recessed",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "10-round",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "thumbhole",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 5,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle-thumbhole" template with seed 200.",
    "name": "bolt-rifle-thumbhole-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
          "profile": "heavy",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "barrelBore": "L",
          "clearance": "L",
          "length": "L",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "thumbhole",
          "magazineWell": "recessed",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "5-round",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "thumbhole",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 0,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle-thumbhole" template with seed 300.",
    "name": "bolt-rifle-thumbhole-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
          "profile": "heavy",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "thumbhole",
          "magazineWell": "recessed",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "5-round",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "thumbhole",
        },
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > bullpup > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.rail",
        "slot": 4,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bullpup" template with seed 100.",
    "name": "bullpup-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "bullpup",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "L",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.rail",
        "slot": 6,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bullpup" template with seed 200.",
    "name": "bullpup-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "bullpup",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "L",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "handguard.rail",
        "slot": 0,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bullpup" template with seed 300.",
    "name": "bullpup-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "bullpup",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "L",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > pistol > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "frame.slide",
        "to": "slide.frame",
      },
      {
        "from": "slide.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "frame.barrel",
        "to": "barrel.frame",
      },
      {
        "from": "frame.magazine",
        "to": "magazine.top",
      },
    ],
    "description": "Generated from the "pistol" template with seed 100.",
    "name": "pistol-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
          "profile": "pistol",
        },
      },
      "frame": {
        "family": "frame",
        "params": {
          "bore": "S",
          "gripLength": "S",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "S",
          "profile": "pistol",
        },
      },
      "slide": {
        "family": "slide",
      },
    },
    "root": "frame",
  },
  {
    "connections": [
      {
        "from": "frame.slide",
        "to": "slide.frame",
      },
      {
        "from": "slide.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "frame.barrel",
        "to": "barrel.frame",
      },
      {
        "from": "frame.magazine",
        "to": "magazine.top",
      },
    ],
    "description": "Generated from the "pistol" template with seed 200.",
    "name": "pistol-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
          "profile": "pistol",
        },
      },
      "frame": {
        "family": "frame",
        "params": {
          "bore": "S",
          "gripLength": "M",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "S",
          "profile": "pistol",
        },
      },
      "slide": {
        "family": "slide",
      },
    },
    "root": "frame",
  },
  {
    "connections": [
      {
        "from": "frame.slide",
        "to": "slide.frame",
      },
      {
        "from": "slide.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "frame.barrel",
        "to": "barrel.frame",
      },
      {
        "from": "frame.magazine",
        "to": "magazine.top",
      },
      {
        "from": "slide.rail",
        "slot": 0,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "pistol" template with seed 300.",
    "name": "pistol-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
          "profile": "pistol",
        },
      },
      "frame": {
        "family": "frame",
        "params": {
          "bore": "M",
          "gripLength": "S",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "S",
          "profile": "pistol",
        },
      },
      "sight": {
        "family": "sight",
      },
      "slide": {
        "family": "slide",
      },
    },
    "root": "frame",
  },
]
`;

exports[`templates > pump-shotgun > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.tube",
        "to": "tube.rear",
      },
      {
        "from": "tube.cap",
        "to": "barrel.lug",
      },
      {
        "from": "tube.forend",
        "to": "forend.rear",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
    ],
    "description": "Generated from the "pump-shotgun" template with seed 100.",
    "name": "pump-shotgun-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "forend": {
        "family": "forend",
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "pump",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "pump",
          "bore": "L",
          "feed": "tube",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "tapered-sawed",
        },
      },
      "tube": {
        "family": "tube-magazine",
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.tube",
        "to": "tube.rear",
      },
      {
        "from": "tube.cap",
        "to": "barrel.lug",
      },
      {
        "from": "tube.forend",
        "to": "forend.rear",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
    ],
    "description": "Generated from the "pump-shotgun" template with seed 200.",
    "name": "pump-shotgun-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "forend": {
        "family": "forend",
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "pump",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "pump",
          "bore": "L",
          "feed": "tube",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "tapered",
        },
      },
      "tube": {
        "family": "tube-magazine",
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.tube",
        "to": "tube.rear",
      },
      {
        "from": "tube.cap",
        "to": "barrel.lug",
      },
      {
        "from": "tube.forend",
        "to": "forend.rear",
      },
      {
        "from": "receiver.stock",
        "to": "stock-pistol.front",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "receiver.rail",
        "slot": 3,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "pump-shotgun" template with seed 300.",
    "name": "pump-shotgun-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "forend": {
        "family": "forend",
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "trigger",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "pump",
          "bore": "L",
          "feed": "tube",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock-pistol": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "straight",
        },
      },
      "tube": {
        "family": "tube-magazine",
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > revolver > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.cylinder",
        "to": "cylinder.frame",
      },
      {
        "from": "barrel.cylinder",
        "to": "cylinder.barrel",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
    ],
    "description": "Generated from the "revolver" template with seed 100.",
    "name": "revolver-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
          "profile": "revolver",
        },
      },
      "cylinder": {
        "family": "cylinder",
        "params": {
          "chamber": "aligned",
          "chambers": "eight",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
          "well": "none",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "trigger",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "revolver",
          "bore": "S",
          "feed": "cylinder",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.cylinder",
        "to": "cylinder.frame",
      },
      {
        "from": "barrel.cylinder",
        "to": "cylinder.barrel",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
    ],
    "description": "Generated from the "revolver" template with seed 200.",
    "name": "revolver-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
          "profile": "revolver",
        },
      },
      "cylinder": {
        "family": "cylinder",
        "params": {
          "chamber": "aligned",
          "chambers": "six",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
          "well": "none",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "trigger",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "revolver",
          "bore": "S",
          "feed": "cylinder",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.cylinder",
        "to": "cylinder.frame",
      },
      {
        "from": "barrel.cylinder",
        "to": "cylinder.barrel",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
    ],
    "description": "Generated from the "revolver" template with seed 300.",
    "name": "revolver-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
          "profile": "revolver",
        },
      },
      "cylinder": {
        "family": "cylinder",
        "params": {
          "chamber": "aligned",
          "chambers": "eight",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
          "well": "none",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "trigger",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "revolver",
          "bore": "M",
          "feed": "cylinder",
        },
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > smg > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 0,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "smg" template with seed 100.",
    "name": "smg-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "L",
          "profile": "smg",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "S",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "straight",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.rail",
        "slot": 6,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "smg" template with seed 200.",
    "name": "smg-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "S",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "L",
          "profile": "smg",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "S",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 2,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "smg" template with seed 300.",
    "name": "smg-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "clearance": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "length": "L",
          "profile": "smg",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "S",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "straight",
        },
      },
    },
    "root": "receiver",
  },
]
`;
